<resources>
    <string name="app_name">EducationalSoftware</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lorem_ipsum"><![CDATA[Lorem ipsum dolor sit amet</b>, consectetur adipiscing elit. Sed et elit eget ligula ultrices tincidunt. Nulla facilisi. Nullam quis enim ac magna iaculis bibendum.]]></string>
    <string name="modules">Ενότητες 📖</string>
    <string name="login">Σύνδεση</string>
    <string name="email">Email</string>
    <string name="password">Κωδικός</string>
    <string name="not_yet_registered_register_here">Δεν έχετε εγγραφεί ακόμα; Εγγραφείτε εδώ</string>
    <string name="sign_up">Εγγραφή</string>
    <string name="full_name">Όνομα</string>
    <string name="already_registered_login_here">Έχετε ήδη εγγραφεί; Συνδεθείτε εδώ</string>
    <string name="title">Title</string>
    <string name="start_quiz">Ξεκίνα το Κουίζ</string>
    <string name="submit">Υποβολή</string>
    <string name="quiz_results">Quiz Results</string>
    <string name="main_menu">Αρχικό Μενού</string>
    <string name="retry">Ξαναπροσπάθησε</string>
    <string name="profile">Προφίλ</string>
    <string name="user_information">Πληροφορίες χρήστη</string>
    <string name="username">Όνομα χρήστη</string>
    <string name="contact_us">Επικοινωνήστε μαζί μας</string>
    <string name="sign_out">Αποσύνδεση</string>
    <string name="delete_account">Διαγραφή Λογαριασμού</string>
    <string name="todo">TODO</string>
    <string name="user_statistics">Στατιστικά χρήστη 📊</string>
    <string name="total_attempts">Συνολικές προσπάθειες</string>
    <string name="best_score">Καλύτερο αποτέλεσμα 🥇</string>
    <string name="redirectToQuiz">Ολοκληρώσατε με επιτυχία την ενότητα! Για να ενισχύσετε όσα μάθατε, σας προσκαλούμε να κάνετε ένα γρήγορο κουίζ. Είναι ένας διασκεδαστικός και ελκυστικός τρόπος για να ελέγξετε τις γνώσεις σας.Κάντε κλικ παρακάτω για να ξεκινήσετε το κουίζ!</string>
    <string name="start">Έναρξη</string>
    <string name="welcomeText">🎉 Καλώς ήρθατε στην εκπαιδευτική μας εφαρμογή! 🎉</string>
    <string name="welcome_text">Είμαστε πολύ χαρούμενοι που είστε εδώ και ανυπομονούμε να ξεκινήσουμε αυτό το διασκεδαστικό ταξίδι μάθησης μαζί σας! 🌟\n\nΓια να ξεκινήσουμε, θα χρειαστεί να απαντήσετε σε μερικές απλές ερωτήσεις. Αυτές οι ερωτήσεις θα μας βοηθήσουν να καταλάβουμε τι ξέρετε ήδη, ώστε να μπορούμε να κάνουμε το μάθημα ακόμα πιο ενδιαφέρον και διασκεδαστικό για εσάς! 🎈\n\nΠατήστε το κουμπί \'Έναρξη\' για να ξεκινήσετε με τις ερωτήσεις. Καλή επιτυχία και καλή διασκέδαση! 🎉✨</string>
</resources>