<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/signInTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="30dp"
        android:text="@string/login"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_gravity="center"/>
    <TextView
        android:id="@+id/emailSignInTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="20dp"
        android:textSize="22sp"
        android:text="@string/email"/>
    <EditText
        android:id="@+id/emailSignInEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginBottom="20dp"
        android:ems="13"/>
    <TextView
        android:id="@+id/passwordSignInTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:text="@string/password"
        android:layout_marginStart="70dp" />
    <EditText
        android:id="@+id/passwordSignInEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:inputType="textPassword"
        android:layout_marginBottom="20dp"
        android:ems="13" />
    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:textSize="22sp"
        android:text="@string/login" />
    <TextView
        android:id="@+id/signUpRedirectTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/not_yet_registered_register_here"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="#3F51B5"/>
</LinearLayout>